padding out the homepage content...starting to look a lot better

--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -17,6 +17,108 @@
                 <p>
                     Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz. 
             </div>
+            <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding">
+                <a class="github-button" href="https://github.com/ButchersBoy/MaterialDesignInXaml" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/doobry/stargazers" data-count-api="/repos/MaterialDesignInXaml/F1inXAML#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Material Design In XAML on GitHub">Star
+                </a>              
+            </div>
         </div>
+        <div class="mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__supporting-text no-left-padding">
+                <h2 class="mdl-card__subtitle-text">FEATURES:</h2>
+                <ul>
+                    <li>Styles and variations for the majority of standrad WPF controls</li>
+                    <li>Many more additional controls to support the Material Design aesthetic and flow</li>
+                    <li>Easy configuration of Material Design Colour palettes at both design and run time</li>
+                    <li>Transitionas API for easy build GUI animations</li>
+                    <li>Works stand-alone, and also compatible with other populare WPF frameworks,  MahApps and Dragablz</li>
+                    <li>MVVM framework agnostic</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="mdl-grid mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+        
+        <div class="mdl-cell--12-col">
+            <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">Standard WPF Control Styles</h2>                    
+            </div>    
+            <div class="mdl-card__media no-background">
+                <img src="./images/demo-buttons.png" class="article-image">
+            </div>
+        </div>
+    </div>
+    
+    <div class="mdl-grid mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+        <div class="mdl-cell mdl-cell--6-col">
+            <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">Material Design Specific Controls</h2>                    
+            </div>
+            <div class="mdl-card__supporting-text">
+                In addition to standard control themes the kit contains new controls to help deliver a full Material Design experience, 
+                including: clocks, drawers, dialogs, floating action buttons, chips, and more.
+            </div>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <div class="mdl-card__media no-background">
+                <img src="./images/demo-clock-207-373.png" class="article-image">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="mdl-grid mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+        <div class="mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__title no-padding">
+                <h2 class="mdl-card__title-text">DEMO &amp; SOURCE</h2>                    
+            </div>
+            <div class="mdl-card__media no-background">
+                <img src="./images/demo-home-512-373.png" class="article-image">
+            </div>
+            <div class="mdl-card__supporting-text">
+                Two demos are included in the source code, which can be downloaded from GitHub and run with VS2015 and above.
+            </div>
+        </div>
+    </div>
+    <div class="mdl-grid mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+        <div class="mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__title no-padding">
+                <h2 class="mdl-card__title-text">SHOWCASE: F1ix</h2>                    
+            </div>
+            <div class="mdl-card__media no-background">
+                <img src="./images/f1ix-ss-1.png" class="article-image">
+            </div>            
+            <div class="mdl-card__supporting-text">
+                F1ix uses the Transitions API to bring alive various statistics about Formula 1 racing.
+            </div>
+        </div>
+    </div>
+    <div class="mdl-grid mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+        <div class="mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__title no-padding">
+                <h2 class="mdl-card__title-text">SHOWCASE: DOOBRY</h2>                    
+            </div>
+            <div class="mdl-card__media no-background">
+                <img src="./images/screen-query-runner-500.png" class="article-image">
+            </div>            
+            <div class="mdl-card__supporting-text">
+                doobry, a SQL editor for Azure's DocumentDb NoSQL database utilises the toolkit to produce a fluid, bold, and engaging interface.
+            </div>
+        </div>
+    </div>
+    <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+        <div class="mdl-cell mdl-cell--12-col">
+            <div class="mdl-card__title no-left-padding">
+                <h2 class="mdl-card__title-text">GETTING STARTED</h2>
+                                    
+            </div>
+            <div class="mdl-card__subtitle-text">
+                Getting started bringing Material Design to your WPF apps takes minutes, follow this guide and dive in, and if you want, join our community.
+            </div>
+            <div class="mdl-card__supporting-text">
+                <p>This is our "super quick start" guide. A more comprehensive getting started guide can be found on our WIKI, and we highly recommend you download and run the demo application contained within the source code.
+                    </p>
+                    
+            </div>
+        </div>    
     </div>
 </div>
