finish off home page. dynamic meta tags

--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -1,30 +1,32 @@
 <div class="mdl-grid standard-max-width">
-    <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-        <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet no-background">
-            <img src="./images/MD4XAML.png" class="article-image">
+    <div class="mdl-card mdl-shadow--4dp  mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet">
+        <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet">
+            <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet no-background">
+                <img src="./images/MD4XAML.png" class="article-image">
+            </div>
+            <div class="mdl-cell mdl-cell--8-col">
+                <div class="mdl-card__title no-left-padding">
+                    <h2 class="mdl-card__title-text">Material Design In XAML Toolkit</h2>                    
+                </div>
+                <div class="mdl-card__supporting-text no-left-padding">
+                    <p>
+                        Welcome the one of the most comphrensive and easy to use Material Design UI libraries across any platform.
+                    </p>
+                    <p>
+                        With Material Design In XAML Toolkit you can easily bring bring beautiful desktop applications to life, using a modern and popular design language.
+                    </p>
+                    <p>
+                        Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz. 
+                </div>
+                <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding">
+                    <a class="github-button" href="https://github.com/ButchersBoy/MaterialDesignInXaml" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/MaterialDesignInXamlToolkit/stargazers" data-count-api="/repos/ButchersBoy/MaterialDesignInXamlToolkit#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Material Design In XAML on GitHub">Star
+                    </a>              
+                </div>
+            </div>
         </div>
-        <div class="mdl-cell mdl-cell--8-col">
-            <div class="mdl-card__title no-left-padding">
-                <h2 class="mdl-card__title-text">Material Design In XAML Toolkit</h2>                    
-            </div>
+        <div class="mdl-cell--12-col card-alt-area ">        
             <div class="mdl-card__supporting-text no-left-padding">
-                <p>
-                    Welcome the one of the most comphrensive and easy to use Material Design UI libraries across any platform.
-                </p>
-                <p>
-                    With Material Design In XAML Toolkit you can easily bring bring beautiful desktop applications to life, using a modern and popular design language.
-                </p>
-                <p>
-                    Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz. 
-            </div>
-            <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding">
-                <a class="github-button" href="https://github.com/ButchersBoy/MaterialDesignInXaml" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/doobry/stargazers" data-count-api="/repos/MaterialDesignInXaml/F1inXAML#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Material Design In XAML on GitHub">Star
-                </a>              
-            </div>
-        </div>
-        <div class="mdl-cell mdl-cell--12-col">
-            <div class="mdl-card__supporting-text no-left-padding">
-                <h2 class="mdl-card__subtitle-text">FEATURES:</h2>
+                <h2 class="mdl-card__title-text">Features</h2>
                 <ul>
                     <li>Styles and variations for the majority of standrad WPF controls</li>
                     <li>Many more additional controls to support the Material Design aesthetic and flow</li>
@@ -34,6 +36,17 @@
                     <li>MVVM framework agnostic</li>
                 </ul>
             </div>
+        </div>
+        <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit">
+                GitHub &amp; Demo
+            </a>
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://gitter.im/ButchersBoy/MaterialDesignInXamlToolkit">
+                Gitter &amp; Chat
+            </a>
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.nuget.org/packages/MaterialDesignThemes/">
+                Nuget &amp; Lib
+            </a>
         </div>
     </div>
     <div class="mdl-grid mdl-cell mdl-cell--6-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
@@ -103,22 +116,102 @@
             <div class="mdl-card__supporting-text">
                 doobry, a SQL editor for Azure's DocumentDb NoSQL database utilises the toolkit to produce a fluid, bold, and engaging interface.
             </div>
-        </div>
-    </div>
-    <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
-        <div class="mdl-cell mdl-cell--12-col">
-            <div class="mdl-card__title no-left-padding">
-                <h2 class="mdl-card__title-text">GETTING STARTED</h2>
-                                    
-            </div>
-            <div class="mdl-card__subtitle-text">
-                Getting started bringing Material Design to your WPF apps takes minutes, follow this guide and dive in, and if you want, join our community.
-            </div>
-            <div class="mdl-card__supporting-text">
-                <p>This is our "super quick start" guide. A more comprehensive getting started guide can be found on our WIKI, and we highly recommend you download and run the demo application contained within the source code.
-                    </p>
-                    
-            </div>
         </div>    
+    </div>    
+    <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp article-card">        
+        <div class="mdl-card__title">
+            <h2 class="mdl-card__title-text">GETTING STARTED</h2>                                    
+        </div>
+        <div class="mdl-card__supporting-text">
+            Getting started bringing Material Design to your WPF apps takes minutes, follow this guide and dive in, and if you want, join our community. This is our "super quick start" guide. A more comprehensive getting started guide can be found on our <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/wiki">Wiki</a>, and we highly recommend you download and run the demo application contained within the source code.
+        </div>
+        <div class="mdl-card__supporting-text">
+            <p class="bullet">
+                Start a new project, and install from NuGet.  From the Package Manager Console in Visual Studio type:
+            </p>
+            <p>
+                <code>
+                    PM> Install-Package MaterialDesignThemes
+                </code>
+            </p>
+            <p class="bullet">
+                Edit your <code>App.xaml</code> as follows:																
+            </p>                
+            <div class="code">
+                <code>
+&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;<br/>
+&lt;Application . . .&gt;<br/>
+&nbsp;&nbsp;&lt;Application.Resources&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;ResourceDictionary&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;ResourceDictionary.MergedDictionaries&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;ResourceDictionary Source=&quot;pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml&quot; /&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;ResourceDictionary Source=&quot;pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml&quot; /&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;ResourceDictionary Source=&quot;pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml&quot; /&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;ResourceDictionary Source=&quot;pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml&quot; /&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/ResourceDictionary.MergedDictionaries&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;/ResourceDictionary&gt;<br/>
+&nbsp;&nbsp;&lt;/Application.Resources&gt;<br/>
+&lt;/Application&gt;
+                </code>
+            </div>                
+            <p class="bullet">
+                Edit <code>MainWindow.xaml</code> to following:
+            </p>
+            <div class="code">
+                <code>
+&lt;Window . . .<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;xmlns:materialDesign=&quot;http://materialdesigninxaml.net/winfx/xaml/themes&quot;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TextElement.Foreground=&quot;{DynamicResource MaterialDesignBody}&quot;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TextElement.FontWeight=&quot;Regular&quot;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TextElement.FontSize=&quot;13&quot;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TextOptions.TextFormattingMode=&quot;Ideal&quot;<br/> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;TextOptions.TextRenderingMode=&quot;Auto&quot;<br/> 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Background=&quot;{DynamicResource MaterialDesignPaper}&quot;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FontFamily=&quot;{DynamicResource MaterialDesignFont}&quot;&gt;<br/>
+&nbsp;&nbsp;&lt;Grid&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;materialDesign:Card Padding=&quot;32&quot; Margin=&quot;16&quot;&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;TextBlock Style=&quot;{DynamicResource MaterialDesignTitleTextBlock}&quot;&gt;My First Material Design App&lt;/TextBlock&gt;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&lt;/materialDesign:Card&gt;<br/>
+&nbsp;&nbsp;&lt;/Grid&gt;<br/>
+&lt;/Window&gt;<br/>
+                </code>
+            </div>
+            <p class="bullet">
+                Hit F5, viola!
+            </p>              
+            <img src="https://raw.githubusercontent.com/ButchersBoy/MaterialDesignInXamlToolkit/master/web/images/wikiscreen-quickstart.png"></img>  
+        </div>
+          
+        <div class="mdl-cell--12-col card-alt-area ">
+            <div class="mdl-card-title mdl-card--expand">
+                <h2 class="mdl-card__title-text">What next?</h2>
+            </div>            
+            <div class="mdl-card__supporting-text">
+                <p>
+                    There's several things you will want to think about; your palette, the structure of your UI, and what additional features can Material Design in XAML Toolkit bring to your application?
+                </p>
+                <p>
+                    There's plenty to explore to get your creativity in gear.  We strongly suggest you download the demo and have an explore around all the things on offer; new styles, controls, transitions, dialogs and more.  It's also worth checking out some of the articles on the <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/wiki">Wiki</a>. 
+                </p>
+                <p>
+                    Lastly, you can join the Gitter chantroom; stop by, say hello, and ask for help....everyon is welcome!
+                </p>
+                <ul>
+                    <li>To download the source and included demo, vist <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit">GitHub</a></li>
+                    <li>To chat visit <a href="https://gitter.im/ButchersBoy/MaterialDesignInXamlToolkit">Gitter</a></li>
+                <ul>
+            </div>                        
+        </div>    
+        <div class="mdl-card__actions mdl-card--border">
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit">
+                GitHub &amp; Demo
+            </a>
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://gitter.im/ButchersBoy/MaterialDesignInXamlToolkit">
+                Gitter &amp; Chat
+            </a>
+            <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="https://www.nuget.org/packages/MaterialDesignThemes/">
+                Nuget &amp; Lib
+            </a>
+        </div>
     </div>
 </div>
