--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,29 +1,12 @@
 <html itemscope itemtype="http://schema.org/Article">
 <head>
-<title>doobry</title>
+<title><%- windowTitle %></title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="doobry, the NoSQL Editor for DocumentDb">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content="doobry, azure, documentdb, sql, nosql, database, document">
-<meta itemprop="name" content="doobry">
-<meta itemprop="description" content="doobry, the NoSQL Editor for DocumentDb">
-<meta itemprop="image" content="http://materialdesigninxaml.net/images/doobry-512-onwhite.png">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:site" content="@james_willock">
-<meta name="twitter:title" content="doobry">
-<meta name="twitter:description" content="doobry, the NoSQL Editor for DocumentDb">
-<meta name="twitter:creator" content="@james_willock">
-<meta name="twitter:image:src" content="http://materialdesigninxaml.net/images/doobry-icon-256.png">
-<meta property="og:title" content="doobry" />
-<meta property="og:type" content="article" />
-<meta property="og:url" content="http://materialdesigninxaml.net/doobry" />
-<meta property="og:image" content="http://materialdesigninxaml.net/images/doobry-icon-256.png" />
-<meta property="og:description" content="doobry, the NoSQL Editor for DocumentDb" />
-<meta property="og:site_name" content="doobry" />
+<%- metaMarkup %>
 <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
 <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.2.1/material.blue_grey-indigo.min.css">
-
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="stylesheets/style.css">
 
@@ -57,6 +40,7 @@
     <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>    
 		<script>
+      /*
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -64,7 +48,7 @@
     
       ga('create', 'UA-63510848-2', 'auto');
       ga('send', 'pageview');
-    
+      */
     </script>
     <script src="/js/clientbundle.js"></script>    
   </main>			
