--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 </head>
-<body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+<body class="standard mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
 <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout">
 
   <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
@@ -20,8 +20,6 @@
     </div>
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
       <h3>Material Design In XAML</h3>
-    </div>
-    <div class="mdl-layout--large-screen-only mdl-layout__header-row">    
     </div>
     <%- tabBarMarkup %>
   </header>
