--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -1,27 +1,24 @@
 <div class="mdl-grid standard-max-width">
-    <div class="mdl-card mdl-shadow--4dp  mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet">
-        <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet">
-            <div class="mdl-card__media mdl-cell mdl-cell--12-col-tablet no-background">
-                <img src="./images/MD4XAML.png" class="article-image">
-            </div>
-            <div class="mdl-cell mdl-cell--8-col">
-                <div class="mdl-card__title no-left-padding">
-                    <h2 class="mdl-card__title-text">Material Design In XAML Toolkit</h2>                    
-                </div>
-                <div class="mdl-card__supporting-text no-left-padding">
-                    <p>
-                        Welcome the one of the most comphrensive and easy to use Material Design UI libraries across any platform.
-                    </p>
-                    <p>
-                        With Material Design In XAML Toolkit you can easily bring bring beautiful desktop applications to life, using a modern and popular design language.
-                    </p>
-                    <p>
-                        Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz. 
-                </div>
-                <div class="mdl-cell mdl-cell--12-col mdl-card__supporting-text no-padding">
-                    <a class="github-button" href="https://github.com/ButchersBoy/MaterialDesignInXaml" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/MaterialDesignInXamlToolkit/stargazers" data-count-api="/repos/ButchersBoy/MaterialDesignInXamlToolkit#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Material Design In XAML on GitHub">Star
-                    </a>              
-                </div>
+    <div class="mdl-card mdl-shadow--4dp  mdl-cell mdl-cell--12-col">                               
+        <div >
+            <div class="mdl-card__title header-card-title" >
+                <div class="header-card__header-container">
+                    <img src="./images/MD4XAML.png" class="title-image">                                                        
+                    <div class="header-card__supporting-text">
+                        <h2 class="mdl-card__title-text">Material Design In XAML Toolkit</h2>                    
+                        <p>
+                            Welcome the one of the most comphrensive and easy to use Material Design UI libraries across any platform.
+                        </p>
+                        <p>
+                            With Material Design In XAML Toolkit you can easily bring bring beautiful desktop applications to life, using a modern and popular design language.
+                        </p>
+                        <p>
+                            Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz.
+                        </p>
+                        <a class="github-button" href="https://github.com/ButchersBoy/MaterialDesignInXaml" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/MaterialDesignInXamlToolkit/stargazers" data-count-api="/repos/ButchersBoy/MaterialDesignInXamlToolkit#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Material Design In XAML on GitHub">Star
+                        </a>                        
+                    </div>
+                </div>                    
             </div>
         </div>
         <div class="mdl-cell--12-col card-alt-area ">        
