--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </div>
-    <div class="mdl-grid mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp">
+    <div class="mdl-grid mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp">
         <div class="mdl-cell mdl-cell--12-col">
             <div class="mdl-card__title no-padding">
                 <h2 class="mdl-card__title-text">SHOWCASE: DOOBRY</h2>                    
@@ -115,14 +115,14 @@
             </div>
         </div>    
     </div>    
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-tablet mdl-card mdl-shadow--4dp article-card">        
+    <div class="mdl-cell mdl-cell--12-col mdl-cell--8-col-tablet mdl-card mdl-shadow--4dp article-card">        
         <div class="mdl-card__title">
             <h2 class="mdl-card__title-text">GETTING STARTED</h2>                                    
         </div>
-        <div class="mdl-card__supporting-text">
+        <div class="mdl-card__supporting-text full-text">
             Getting started bringing Material Design to your WPF apps takes minutes, follow this guide and dive in, and if you want, join our community. This is our "super quick start" guide. A more comprehensive getting started guide can be found on our <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/wiki">Wiki</a>, and we highly recommend you download and run the demo application contained within the source code.
         </div>
-        <div class="mdl-card__supporting-text">
+        <div class="mdl-card__supporting-text full-text">
             <p class="bullet">
                 Start a new project, and install from NuGet.  From the Package Manager Console in Visual Studio type:
             </p>
@@ -176,14 +176,14 @@
             <p class="bullet">
                 Hit F5, viola!
             </p>              
-            <img src="https://raw.githubusercontent.com/ButchersBoy/MaterialDesignInXamlToolkit/master/web/images/wikiscreen-quickstart.png"></img>  
+            <img src="https://raw.githubusercontent.com/ButchersBoy/MaterialDesignInXamlToolkit/master/web/images/wikiscreen-quickstart.png" class="article-image"></img>  
         </div>
           
         <div class="mdl-cell--12-col card-alt-area">
             <div class="mdl-card-title mdl-card--expand">
                 <h2 class="mdl-card__title-text">What next?</h2>
             </div>            
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text full-text">
                 <p>
                     There's several things you will want to think about; your palette, the structure of your UI, and what additional features can Material Design in XAML Toolkit bring to your application?
                 </p>
