--- a/views/partials/testimonials.html
+++ b/views/partials/testimonials.html
@@ -27,7 +27,7 @@ Material Design in XAML is rich of awesome features and frequently updated with 
             </p>
             <div class="quote-details-wrapper"> 
                 <div class="quote-details">
-                    Giacomo Galletto<br /><a href="http://laspeziaportservice.it">La Spazia Port Service</a> 
+                    Giacomo Galletto<br /><a href="http://laspeziaportservice.it">La Spezia Port Service</a> 
                 </div>
                 <img class="quote-details-picture" src="/images/testimonial-laspezia.png">
             </div>            
