--- a/views/partials/news.html
+++ b/views/partials/news.html
@@ -5,19 +5,73 @@
                 <div class="header-card__header-container">
                     <img src="./images/MD4XAML.png" class="title-image">                                                        
                     <div class="header-card__supporting-text">
-                        <h2 class="mdl-card__title-text">Version 2.3.0 Released</h2>                    
+                        <h2 class="mdl-card__title-text"><a hef="#2_3_0">Version 2.3.0 Released</a></h2>                    
                         <p>
                             Version 2.3.0 Now Available!
                         </p>
+                        <ul>
+                            <li><a href="https://www.nuget.org/packages/MaterialDesignThemes/"><code>Install-Package MaterialDesignThemes</code></a></li>
+                            <li><a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.3.0">GitHub release notes</a></li>                            
+                        </ul>                        
+                    </div>                    
+                    <div class="mdl-grid standard-copy">
                         <p>
-                            With Material Design In XAML Toolkit you can easily bring bring beautiful desktop applications to life, using a modern and popular design language.
-                        </p>
-                        <p>
-                            Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz.
-                        </p>
-                        <a class="github-button" href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit" data-icon="octicon-star" data-style="mega" data-count-href="/ButchersBoy/MaterialDesignInXamlToolkit/stargazers" data-count-api="/repos/ButchersBoy/MaterialDesignInXamlToolkit#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star Material Design In XAML on GitHub">Star
-                        </a>                        
+                        Material Design In XAML 2.3.0 is out now, including the following new features:   
+                    </p>
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                Cards...or indeed any XAML content can easily be flipped using the new <code>Flipper</code> control and <code>MaterialDesignCardFlipper</code> style.
+                            </p>
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <a href="https://github.com/MaterialDesignInXAML/Website/blob/resources/releases/2_3_0/CardFlipAnimation.gif">
+                            <img width="190" height="241" src="https://raw.githubusercontent.com/MaterialDesignInXAML/Website/resources/releases/2_3_0/CardFlipAnimation10fps.gif" border="0" alt="Flippable Cards">
+                            </a>
+                        </div>
                     </div>
+                    <div class="mdl-grid standard-copy">
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                Buttons or other XAML content can easily be badges using the new <code>Badged</code> control.
+                            </p>
+                            <p>
+                                Badges can contain any content, from counters to <code>PackIcon</code> instances.
+                            </p>
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <a href="https://github.com/MaterialDesignInXAML/Website/blob/resources/releases/2_3_0/BadgeAnimation.gif">
+                            <img width="190" height="136" src="https://raw.githubusercontent.com/MaterialDesignInXAML/Website/resources/releases/2_3_0/BadgeAnimation.gif" border="0" alt="Badges">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mdl-grid standard-copy">
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                Toolbar theme has been improved and supports badges.
+                            </p>
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <a href="https://github.com/MaterialDesignInXAML/Website/blob/resources/releases/2_3_0/Toolbar.png">
+                            <img width="190" height="41" src="https://raw.githubusercontent.com/MaterialDesignInXAML/Website/resources/releases/2_3_0/Toolbar.png" border="0" alt="Badges">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="mdl-grid standard-copy">
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                We have a ListView.GridView style (to accompany the existing DataGrid style).
+                            </p>
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <a href="https://github.com/MaterialDesignInXAML/Website/blob/resources/releases/2_3_0/ListViewGridView.png">
+                            <img width="190" height="47" src="https://raw.githubusercontent.com/MaterialDesignInXAML/Website/resources/releases/2_3_0/ListViewGridView.png" border="0" alt="Badges">
+                            </a>
+                        </div>
+                    </div>
+
+
+                    
                 </div>                    
             </div>
         </div>
