--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -10,7 +10,7 @@
                             Welcome the one of the most comphrensive and easy to use Material Design UI libraries across any platform.
                         </p>
                         <p>
-                            With Material Design In XAML Toolkit you can easily bring bring beautiful desktop applications to life, using a modern and popular design language.
+                            With Material Design In XAML Toolkit you can easily bring beautiful desktop applications to life, using a modern and popular design language.
                         </p>
                         <p>
                             Fully open source and one of the most popular GUI libraries for WPF, the library is also compatible with MahApps and Dragablz.
@@ -25,11 +25,11 @@
             <div class="mdl-card__supporting-text no-left-padding">
                 <h2 class="mdl-card__title-text">Features</h2>
                 <ul>
-                    <li>Styles and variations for the majority of standrad WPF controls</li>
+                    <li>Styles and variations for the majority of standard WPF controls</li>
                     <li>Many more additional controls to support the Material Design aesthetic and flow</li>
                     <li>Easy configuration of Material Design Colour palettes at both design and run time</li>
-                    <li>Transitionas API for easy build GUI animations</li>
-                    <li>Works stand-alone, and also compatible with other populare WPF frameworks,  MahApps and Dragablz</li>
+                    <li>Transitions API for easy build GUI animations</li>
+                    <li>Works stand-alone, and also compatible with other popular WPF frameworks,  MahApps and Dragablz</li>
                     <li>MVVM framework agnostic</li>
                 </ul>
             </div>
