--- a/views/partials/news.html
+++ b/views/partials/news.html
@@ -5,6 +5,50 @@
                 <div class="header-card__header-container">
                     <img src="./images/MD4XAML.png" class="title-image">                                                        
                     <div class="header-card__supporting-text">
+                        <h2 class="mdl-card__title-text"><a hef="#2_3_1">Version 2.3.1 Released</a></h2>                    
+                        <p>
+                            Version 2.3.1 Now Available!
+                        </p>
+                        <ul>
+                            <li><a href="https://www.nuget.org/packages/MaterialDesignThemes/"><code>Install-Package MaterialDesignThemes</code></a></li>
+                            <li><a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.3.1">GitHub release notes</a></li>                            
+                        </ul>                        
+                    </div>                    
+                    <div class="mdl-grid standard-copy">
+                        <p>
+                        Material Design In XAML 2.3.1 contains various bug fixes, enhancements, and new progress bar variants of some standard buttons:   
+                        </p>
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                If you are familiar with the Google Driving app, or other Android apps then you may recognise these buttons.
+                                Use the new <code>materialDesign:ButtonProgressAssist.Value</code> extension method on supported buttons to display progress to the user.
+                            </p>
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <img width="148" height="146" src="https://user-images.githubusercontent.com/658107/28334992-ce144e9e-6bf4-11e7-8f26-87120ac05cb1.gif" border="0" alt="FAB - with progress">                            
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                Use the new <code>materialDesign:ButtonProgressAssist.Value</code> extension method on supported buttons to display progress to the user.
+                            </p>
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <img src="https://user-images.githubusercontent.com/658107/28122732-f52fe3cc-6716-11e7-94b9-18e780f8db8c.gif" border="0" alt="Standard button - with progress">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">                               
+        <div>
+            
+
+            <div class="mdl-card__title header-card-title" >
+                <div class="header-card__header-container">
+                    <img src="./images/MD4XAML.png" class="title-image">                                                        
+                    <div class="header-card__supporting-text">
                         <h2 class="mdl-card__title-text"><a hef="#2_3_0">Version 2.3.0 Released</a></h2>                    
                         <p>
                             Version 2.3.0 Now Available!
@@ -17,7 +61,7 @@
                     <div class="mdl-grid standard-copy">
                         <p>
                         Material Design In XAML 2.3.0 is out now, including the following new features:   
-                    </p>
+                        </p>
                         <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
                             <p>
                                 Cards...or indeed any XAML content can easily be flipped using the new <code>Flipper</code> control and <code>MaterialDesignCardFlipper</code> style.
