--- a/views/partials/home.html
+++ b/views/partials/home.html
@@ -194,7 +194,7 @@
                     Lastly, you can join the Gitter chantroom; stop by, say hello, and ask for help....everyon is welcome!
                 </p>
                 <ul>
-                    <li>To download the source and included demo, vist <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit">GitHub</a></li>
+                    <li>To download the source and included demo, visit <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit">GitHub</a></li>
                     <li>To chat visit <a href="https://gitter.im/ButchersBoy/MaterialDesignInXamlToolkit">Gitter</a></li>
                 <ul>
             </div>                        
