--- a/views/partials/news.html
+++ b/views/partials/news.html
@@ -1,48 +1,98 @@
 <div class="mdl-grid standard-max-width">
 
-        <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">                               
-                <div>
-                    <div class="mdl-card__title header-card-title" >
-                        <div class="header-card__header-container">
-                            <img src="./images/MD4XAML.png" class="title-image">                                                        
-                            <div class="header-card__supporting-text">
-                                <h2 class="mdl-card__title-text"><a hef="#2_3_1">Version 2.4.0 Released</a></h2>                    
-                                <p>
-                                    Version 2.4.0 Is Out Now!
-                                </p>
-                                <ul>
-                                    <li><a href="https://www.nuget.org/packages/MaterialDesignThemes/"><code>Install-Package MaterialDesignThemes</code></a></li>
-                                    <li><a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.4.0">GitHub release notes</a></li>                            
-                                </ul>                        
-                            </div>                    
-                            <div class="mdl-grid standard-copy">
-                                <p>
-                                Material Design In XAML 2.4.0 allows advanced TreeView customisations helping you to bring advanced UI and actions closer to the context for which they are intended.
-                                </p>
-                                <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
-                                    <p>
-                                        With the new <code>materialDesign:TreeViewAssist. AdditionalTemplateSelector</code> attached property a node's visual tree can contain can additional content, outside of the standard rippled selection area of the node.
-                                    </p>
-                                    <p>
-                                        As with XAML, any content can re-rendered for the TreeViewItem or its data context.  This easily enables a tree view navigation to be combined with contextual information and interactions, easily visible to the user.
-                                    </p>                                    
-                                </div>
-                                <div class="mdl-cell mdl-cell--6-col">
-                                    <img src="https://user-images.githubusercontent.com/658107/36164762-49a7fd68-10e5-11e8-89b4-eb890412d324.png" border="0" alt="TreeView nodes with additional, rich content.">
-                                </div>
-                            </div>
-                            <div class="mdl-grid standard-copy">
-                                <p>
-                                The icon pack has been updated with all your favourite new icons from <a href="https://materialdesignicons.com/">materialdesignicons.com</a>.
-                                </p>
-                                <p>
-                                Various other fixes from the community are also included.  Please check the <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.4.0">release notes</a> for a complete list.
-                                </p>
-                            </div>
+    <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">                               
+        <div>
+            <div class="mdl-card__title header-card-title" >
+                <div class="header-card__header-container">
+                    <img src="./images/MD4XAML.png" class="title-image">                                                        
+                    <div class="header-card__supporting-text">
+                        <h2 class="mdl-card__title-text"><a hef="#2_5_0">Version 2.5.0 Released</a></h2>                    
+                        <p>
+                            Version 2.5.0 Is Out Now!
+                        </p>
+                        <ul>
+                            <li><a href="https://www.nuget.org/packages/MaterialDesignThemes/"><code>Install-Package MaterialDesignThemes</code></a></li>
+                            <li><a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.5.0">GitHub release notes</a></li>                            
+                        </ul>                        
+                    </div>                    
+                    <div class="mdl-grid standard-copy">
+                        <p>
+                        Material Design In XAML 2.5.0 (finally!) supports dark theme dialogs:
+                        </p>
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                At long last Material Design In XAML supports dark themed dialogs.
+                            </p>
+                            <p>
+                                Dialogs can also now be embedded within a visual tree using <code>Style="{StaticResource MaterialDesignEmbeddedDialogHost}"</code>, in addition to the default popup window style
+                            </p>                                    
                         </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <img src="./images/DarkThemeDialog.png" border="0" alt="Dark theme dialog">
+                        </div>
+                    </div>
+                    <div class="mdl-grid standard-copy">
+                        <p>
+                        Continuing support for <a href="https://mahapps.com//">MahApps</a> with 1.6.5 intergration.
+                        </p>
+                        <p>
+                        The <a href="https://materialdesignicons.com/">Material Design Icon Pack</a> has been updated.
+                        </p>
+                        <p>
+                        The TimePicker control now supports seconds selection.
+                        </p>
+                        <p>
+                        Please check the <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.5.0">release notes</a> for a complete list of changes.
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">                               
+        <div>
+            <div class="mdl-card__title header-card-title" >
+                <div class="header-card__header-container">
+                    <img src="./images/MD4XAML.png" class="title-image">                                                        
+                    <div class="header-card__supporting-text">
+                        <h2 class="mdl-card__title-text"><a hef="#2_4_0">Version 2.4.0 Released</a></h2>                    
+                        <p>
+                            Version 2.4.0 Is Out Now!
+                        </p>
+                        <ul>
+                            <li><a href="https://www.nuget.org/packages/MaterialDesignThemes/"><code>Install-Package MaterialDesignThemes</code></a></li>
+                            <li><a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.4.0">GitHub release notes</a></li>                            
+                        </ul>                        
+                    </div>                    
+                    <div class="mdl-grid standard-copy">
+                        <p>
+                        Material Design In XAML 2.4.0 allows advanced TreeView customisations helping you to bring advanced UI and actions closer to the context for which they are intended.
+                        </p>
+                        <div class="mdl-cell mdl-cell--6-col mdl-card__supporting-text no-padding">
+                            <p>
+                                With the new <code>materialDesign:TreeViewAssist. AdditionalTemplateSelector</code> attached property a node's visual tree can contain can additional content, outside of the standard rippled selection area of the node.
+                            </p>
+                            <p>
+                                As with XAML, any content can re-rendered for the TreeViewItem or its data context.  This easily enables a tree view navigation to be combined with contextual information and interactions, easily visible to the user.
+                            </p>                                    
+                        </div>
+                        <div class="mdl-cell mdl-cell--6-col">
+                            <img src="https://user-images.githubusercontent.com/658107/36164762-49a7fd68-10e5-11e8-89b4-eb890412d324.png" border="0" alt="TreeView nodes with additional, rich content.">
+                        </div>
+                    </div>
+                    <div class="mdl-grid standard-copy">
+                        <p>
+                        The icon pack has been updated with all your favourite new icons from <a href="https://materialdesignicons.com/">materialdesignicons.com</a>.
+                        </p>
+                        <p>
+                        Various other fixes from the community are also included.  Please check the <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.4.0">release notes</a> for a complete list.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">                               
         <div>
