--- a/views/partials/news.html
+++ b/views/partials/news.html
@@ -6,6 +6,29 @@
                 <div class="header-card__header-container">
                     <img src="./images/MD4XAML.png" class="title-image">                                                        
                     <div class="header-card__supporting-text">
+                        <h2 class="mdl-card__title-text"><a hef="#2_5_0">Version 2.5.1 Released</a></h2>                    
+                        <p>
+                            Version 2.5.1 Is Out Now!
+                        </p>
+                        <ul>
+                            <li><a href="https://www.nuget.org/packages/MaterialDesignThemes/"><code>Install-Package MaterialDesignThemes</code></a></li>
+                            <li><a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.5.1">GitHub release notes</a></li>                            
+                        </ul>                        
+                    </div>                    
+                    <div class="mdl-grid standard-copy">
+                        Please check the <a href="https://github.com/ButchersBoy/MaterialDesignInXamlToolkit/releases/tag/v2.5.1">release notes</a> for a complete list of changes.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">                               
+        <div>
+            <div class="mdl-card__title header-card-title" >
+                <div class="header-card__header-container">
+                    <img src="./images/MD4XAML.png" class="title-image">                                                        
+                    <div class="header-card__supporting-text">
                         <h2 class="mdl-card__title-text"><a hef="#2_5_0">Version 2.5.0 Released</a></h2>                    
                         <p>
                             Version 2.5.0 Is Out Now!
