--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,13 @@
 <link rel="stylesheet" href="stylesheets/style.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7838996580924417",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body class="standard mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
 <div class="mdl-layout mdl-layout--fixed-header mdl-js-layout">
